WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123530
REGRESSION(
r158288
): media/media-can-play-mpeg4-video.html fails
https://bugs.webkit.org/show_bug.cgi?id=123530
Summary
REGRESSION(r158288): media/media-can-play-mpeg4-video.html fails
Ryosuke Niwa
Reported
2013-10-30 13:52:35 PDT
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=media%2Fmedia-can-play-mpeg4-video.html
e.g.
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r158300%20(11071)/results.html
--- /Volumes/Data/slave/mountainlion-debug-tests-wk1/build/layout-test-results/media/media-can-play-mpeg4-video-expected.txt +++ /Volumes/Data/slave/mountainlion-debug-tests-wk1/build/layout-test-results/media/media-can-play-mpeg4-video-actual.txt @@ -5,6 +5,6 @@ EXPECTED (video.canPlayType('video/x-m4v') == 'maybe') OK EXPECTED (video.canPlayType('video/mp4') == 'maybe') OK EXPECTED (video.canPlayType('video/mp4; Codecs="avc1.4D400C"') == 'probably') OK -EXPECTED (video.canPlayType(' Video/MP4 ; CODECS="mp4v.20.8, mp4a.40.2"') == 'probably') OK +EXPECTED (video.canPlayType(' Video/MP4 ; CODECS="mp4v.20.8, mp4a.40.2"') == 'probably'), OBSERVED '' FAIL END OF TEST
Attachments
Patch
(3.19 KB, patch)
2013-10-30 14:58 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-10-30 13:52:50 PDT
Actually, it's failing everywhere.
Ryosuke Niwa
Comment 2
2013-10-30 13:55:48 PDT
Added the failing test expectation in
http://trac.webkit.org/changeset/158312
.
Jer Noble
Comment 3
2013-10-30 14:58:12 PDT
Created
attachment 215566
[details]
Patch
Jer Noble
Comment 4
2013-10-30 15:05:42 PDT
Committed
r158318
: <
http://trac.webkit.org/changeset/158318
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug