REGRESSION(r158288): media/media-can-play-mpeg4-video.html fails https://bugs.webkit.org/show_bug.cgi?id=123530

Reviewed by Eric Carlson.

Source/WebCore:

Lower case the mime type before passing it along to MediaPlayer.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType):
(WebCore::HTMLMediaElement::selectNextSourceChild):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/141686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158318 268f45cc-cd09-0410-ab3c-d52691b4dbfc